# flask-template

./: .gitignore  Dockerfile  circle.yml  docker-compose.yml  postgres.env  pyproject.toml  readme.md  requirements.txt
.circleci/: config.yml
app/: app.py  config.py  swagger.py
app/commands/: init_db.py
app/config/: __init__.py  default.py  testing.py
app/models/: base.py  item.py  store.py  user.py
app/resources/: item.py  store.py  temp.py  user.py
app/serializers/: item.py
app/util/: encoder.py  logs.py
scripts/: init_env.sh  wait_for_it.sh
tasks/: __init__.py
tests/: test_items.py
tf/: main.tf
tf/modules/api/: main.tf
tf/modules/docker_repo/: main.tf
