[tool.poetry]
name = "flask-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.0.1"
Flask-RESTful = "0.3.9"
Flask-SQLAlchemy = "2.5.1"
Jinja2 = "3.0.1"
Flask-JWT-Extended = "4.2.1"
python-dateutil = "2.8.1"
pytz = "2021.1"
SQLAlchemy = "1.4.19"
Werkzeug = "2.0.1"
psycopg2-binary = "2.9.1"
rich = "10.5.0"
python-dotenv = "0.18.0"
isort = "5.9.2"
black = "21.6b0"
flasgger = "^0.9.5"
marshmallow = "^3.12.2"
apispec = "^4.7.1"
flask-apispec = "^0.11.0"
pytest = "^6.2.4"
pytest-flask = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
